--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@stianlarsen/border-beam": "^1.0.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
