--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stianlarsen/border-beam": "^1.0.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
     "react-simple-typewriter": "^5.0.1",
     "react-snowfall": "^2.2.0",
     "sweetalert2": "^11.16.0"
