--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
     "react-snowfall": "^2.2.0",
     "sweetalert2": "^11.16.0"
